[imad-console] Updates ui/article1.html

--- a/ui/article1.html
+++ b/ui/article1.html
@@ -1,2 +1,16 @@
 <html>
+    <head>
+        <title>
+            Article 1
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href="/">
+                Home
+            </a>
+        </div>
+        <hr/>
+        <h3>Article 1</h3>
+    </body>
 </html>
