--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,11 @@
         <div class="center text-big bold">
             Hi! I am Jefferson.
         </div>
+         <div>
+            <input type='text' id='username' placeholder='username'/>
+            <input type='password' id='password' placeholder='password'/>
+            <input type='submit' id='submit-btn'/>
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
